--- a/settings.html
+++ b/settings.html
@@ -97,7 +97,7 @@
                 <h3>☕️ Fuel the Development!</h3>
                 <p>Created with ❤️ by KayWat</p>
                 <p class="subtitle">Your coffee keeps the updates coming and helps maintain this free tool for everyone!</p>
-                <a href="https://www.buymeacoffee.com/kaywat" target="_blank" class="coffee-button">Buy me a coffee ☕️</a>
+                <a href="https://www.paypal.com/donate/?hosted_button_id=J3ABMPG6MQF3L&custom=1coffee" target="_blank" class="coffee-button">Buy me a coffee ☕️</a>
             </div>
             <div class="bottom-text">
                 <p>Check out our other tools: <a href="https://onpoint.fixmyapple.org" target="_blank">OnPoint</a></p>
